--- a/livegap-mini/frontend/package.json
+++ b/livegap-mini/frontend/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/node": "24.10.1",
     "@types/react": "19.2.6",
+    "@types/react-dom": "^19.2.3",
     "typescript": "^5.0.0"
   }
 }
